--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,10 @@
 # These individuals contributed to the hbnb project in this repository 
 
+Original Authors:
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+
+Contributing Authors:
+Tosin Omojola <sadorect@gmail.com>
+Ifeoluwa Aweda <@gmail.com>
